# kaggle-orbit-wars-arrsearch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  findings.md  main.py  manifest.csv  pyproject.toml  vision.md
.claude/: settings.json
agents/: __init__.py  array_ranker_agent.py  kaggle_ender.py
docs/: replay_action_stats.json  replay_action_stats.md
docs/plans/: array-search-initiative.md  training_plan.md
envs/orbit_wars_mini/: __init__.py
scripts/: analyse_replays.py  array_tournament.py  benchmark_geometry.py  build_graph_array_scenarios.py  build_replay_bootstrap.py  engine_yardstick.py  run_self_play_loop.py  train_ranker.py
sim/: __init__.py  fast_env.py  interpreter_fast.py
src/: physics.py
src/array_search/: __init__.py  action_filters.py  features.py  labels.py  mcts_teacher.py  ranker.py  records.py  scenarios.py  self_play.py  state_adapter.py  training_log.py
src/graph_training/: __init__.py  actions.py  agent.py  array_env.py  geometry_cache.py  search.py  sparse_geometry_cache.py  state.py
tests/: test_action_filters.py  test_array_ranker_agent.py  test_mcts_teacher.py  test_physics_parity.py  test_ranker_exploration.py  test_replay_bootstrap.py  test_sparse_geometry_cache.py  test_state_adapter_parity.py  test_step_multi_seat.py  test_training_log.py
