[project]
name = "kaggle-orbit-wars-arrsearch"
version = "0.1.0"
description = "Array-only search + self-play training track for Kaggle Orbit Wars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cma>=4.4.4",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.2",
    "pandas>=3.0.2",
    "pokerkit>=0.7.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
